Add footer and update README.md

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Sketch</title>
 		<link rel="stylesheet" href="./style.css" />
+		<link rel="icon" type="image/x-icon" href="./img/rainbow-icon.png" />
 	</head>
 	<body>
 		<div class="drawing-area">
@@ -15,6 +16,14 @@
 				id="background"
 			/>
 			<div id="grid"></div>
+		</div>
+		<div class="footer">
+			<p>Website by LSeaton</p>
+			<a
+				href="https://www.flaticon.com/free-icons/rainbow"
+				title="rainbow icons"
+				>Rainbow icons created by Freepik - Flaticon</a
+			>
 		</div>
 		<script src="sketch.js"></script>
 	</body>
