Add cat image and style button

--- a/index.html
+++ b/index.html
@@ -18,21 +18,25 @@
 				/>
 				<div id="grid"></div>
 			</div>
-			<div class="generator">
-				<button>Generate a new grid</button>
-				<p>Pixel size:</p>
-				<input
-					type="range"
-					min="4"
-					max="70"
-					value="35"
-					class="slider"
-					id="pixelSize"
-				/>
-				<p>Hover mode/drag mode (toggle)</p>
-				<input type="checkbox" />
+			<div class="right-side">
+				<img src="./img/space-cat.png" width="180px" alt="A cat in space" />
+				<div class="generator">
+					<button id="generateBtn">Generate a new grid</button>
+					<p>Pixel size:</p>
+					<input
+						type="range"
+						min="4"
+						max="70"
+						value="35"
+						class="slider"
+						id="pixelSize"
+					/>
+					<p>Hover mode/drag mode (toggle)<input type="checkbox" /></p>
+					<p>Find the cat mode (check)<input type="checkbox" /></p>
+				</div>
 			</div>
 		</div>
+
 		<div class="footer">
 			<p>Website by LSeaton</p>
 			<a
