Begin implementing a find-the-cat game

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div class="main">
-			<div class="drawing-area">
+			<div id="drawing-area">
 				<img
 					src="./img/color-wheel.jpg"
 					alt="Rainbow gradient"
