Debug: remove a cat before adding a new one

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				</button>
 				<div id="settings">
 					<p>
-						Pixel size:
+						Pixel count:
 						<input
 							type="range"
 							min="4"
