--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div class="main">
-			<div id="drawing-area">
+			<div id="drawing-area" onclick="checkClick()">
 				<img
 					src="./img/color-wheel.jpg"
 					alt="Rainbow gradient"
@@ -36,9 +36,10 @@
 							id="pixel-size"
 						/>
 					</p>
-					<p>Drag mode: <input type="checkbox" id="drag-mode" /></p>
-					<p>Find the cat mode: <input type="checkbox" id="cat-mode" /></p>
-					<button id="goBtn" onclick="goButton()">Go!</button>
+					<p>
+						Find the cat mode: <input type="checkbox" id="cat-mode" checked />
+					</p>
+					<button id="goBtn" onclick="reset()">Go!</button>
 				</div>
 			</div>
 		</div>
