Add logic to detect when user clicks over the cat image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<div class="main">
-			<div id="drawing-area" onclick="checkClick()">
+			<div id="drawing-area">
 				<img
 					src="./img/color-wheel.jpg"
 					alt="Rainbow gradient"
